--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,13 @@
     	<artifactId>webdrivermanager</artifactId>
     	<version>5.4.1</version> <!-- Use latest stable version -->
 	</dependency>
-
-
+  <!-- https://mvnrepository.com/artifact/com.github.sdrss/reportng -->
+<dependency>
+    <groupId>com.github.sdrss</groupId>
+    <artifactId>reportng</artifactId>
+    <version>2.7.0</version>
+    <scope>test</scope>
+</dependency>
   </dependencies>
  <build>
   <plugins>
@@ -60,7 +65,9 @@
       <version>3.2.5</version>
       <configuration>
         <suiteXmlFiles>
-          <suiteXmlFile>${suiteXmlFile}</suiteXmlFile> <!-- allows override -->
+          <suiteXmlFile>${suiteXmlFile}</suiteXmlFile> 
+          <!-- allows override -->
+          <!-- <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>  -->
         </suiteXmlFiles>
         <useSystemClassLoader>false</useSystemClassLoader>
         <testFailureIgnore>true</testFailureIgnore>
