--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
     <version>2.7.0</version>
     <scope>test</scope>
 </dependency>
+
+<dependency>
+    <groupId>com.github.javafaker</groupId>
+    <artifactId>javafaker</artifactId>
+    <version>1.0.2</version>
+</dependency>
+
   </dependencies>
  <build>
   <plugins>
